fix action buttons and class icons

--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
                 <div class="relative h-64 mb-4 flex items-center justify-center">
                     <div id="player-character" class="character-float">
                         <div class="w-32 h-32 rounded-full bg-gradient-to-br from-blue-400 to-indigo-600 shadow-lg shadow-blue-500/30 flex items-center justify-center">
-                            <i class="fas fa-hat-wizard text-5xl text-white"></i>
+                            <i id="player-icon" class="fas fa-hat-wizard text-5xl text-white"></i>
                         </div>
                     </div>
                     <div class="absolute bottom-0 left-0 right-0 space-y-1">
