Add aria labels to action buttons for accessibility

--- a/Index.html
+++ b/Index.html
@@ -50,17 +50,17 @@
                 </div>
                 
                 <div class="grid grid-cols-2 gap-3">
-                    <button onclick="playerAttack()" class="action-btn bg-gradient-to-r from-red-500 to-pink-600 hover:from-red-600 hover:to-pink-700">
-                        <i class="fas fa-bolt mr-2"></i> Attaquer
+                    <button onclick="playerAttack()" class="action-btn bg-gradient-to-r from-red-500 to-pink-600 hover:from-red-600 hover:to-pink-700" aria-label="Attaquer">
+                        <i class="fas fa-bolt mr-2" aria-hidden="true"></i> Attaquer
                     </button>
-                    <button onclick="playerHeal()" class="action-btn bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700">
-                        <i class="fas fa-heart mr-2"></i> Soin
+                    <button onclick="playerHeal()" class="action-btn bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700" aria-label="Soin">
+                        <i class="fas fa-heart mr-2" aria-hidden="true"></i> Soin
                     </button>
-                    <button onclick="playerDefend()" class="action-btn bg-gradient-to-r from-yellow-500 to-amber-600 hover:from-yellow-600 hover:to-amber-700">
-                        <i class="fas fa-shield-alt mr-2"></i> Défense
+                    <button onclick="playerDefend()" class="action-btn bg-gradient-to-r from-yellow-500 to-amber-600 hover:from-yellow-600 hover:to-amber-700" aria-label="Défense">
+                        <i class="fas fa-shield-alt mr-2" aria-hidden="true"></i> Défense
                     </button>
-                    <button onclick="playerSpecial()" class="action-btn bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700">
-                        <i class="fas fa-star mr-2"></i> Spécial
+                    <button onclick="playerSpecial()" class="action-btn bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700" aria-label="Spécial">
+                        <i class="fas fa-star mr-2" aria-hidden="true"></i> Spécial
                     </button>
                 </div>
             </div>
