--- a/Index.html
+++ b/Index.html
@@ -183,6 +183,8 @@
         </div>
     </div>
 
+    <script src="player.js"></script>
+    <script src="enemy.js"></script>
     <script src="game.js"></script>
     </body>
 </html>
