--- a/Index.html
+++ b/Index.html
@@ -48,13 +48,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="flex justify-around text-sm mb-4">
+                    <span><i class="fas fa-sword text-red-300 mr-1"></i><span id="player-attack-text">0</span></span>
+                    <span><i class="fas fa-shield-alt text-blue-300 mr-1"></i><span id="player-defense-text">0</span></span>
+                </div>
                 
                 <div class="grid grid-cols-2 gap-3">
                     <button onclick="playerAttack()" class="action-btn bg-gradient-to-r from-red-500 to-pink-600 hover:from-red-600 hover:to-pink-700" aria-label="Attaquer">
                         <i class="fas fa-bolt mr-2" aria-hidden="true"></i> Attaquer
                     </button>
-                    <button onclick="playerHeal()" class="action-btn bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700" aria-label="Soin">
-                        <i class="fas fa-heart mr-2" aria-hidden="true"></i> Soin
+                    <button onclick="playerHeal()" class="action-btn bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700" aria-label="Protection">
+                        <i class="fas fa-shield-alt mr-2" aria-hidden="true"></i> Protection
                     </button>
                     <button onclick="playerDefend()" class="action-btn bg-gradient-to-r from-yellow-500 to-amber-600 hover:from-yellow-600 hover:to-amber-700" aria-label="Défense">
                         <i class="fas fa-shield-alt mr-2" aria-hidden="true"></i> Défense
