Improve gameplay with new content and end-game

--- a/Index.html
+++ b/Index.html
@@ -145,10 +145,11 @@
     <div id="class-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center">
         <div class="bg-gray-800 p-6 rounded-xl space-y-4">
             <h2 class="text-lg font-bold">Choisissez votre classe</h2>
-            <div class="grid grid-cols-3 gap-2">
+            <div class="grid grid-cols-4 gap-2">
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="selectClass('guerrier')">Guerrier</button>
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="selectClass('mage')">Mage</button>
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="selectClass('voleur')">Voleur</button>
+                <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="selectClass('rodeur')">Rôdeur</button>
             </div>
         </div>
     </div>
@@ -163,9 +164,10 @@
     <div id="job-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden">
         <div class="bg-gray-800 p-6 rounded-xl space-y-4">
             <h2 class="text-lg font-bold mb-2">Choisissez un métier</h2>
-            <div class="grid grid-cols-2 gap-2">
+            <div class="grid grid-cols-3 gap-2">
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="selectJob('forgeron')">Forgeron</button>
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="selectJob('herboriste')">Herboriste</button>
+                <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="selectJob('alchimiste')">Alchimiste</button>
             </div>
         </div>
     </div>
