Add post-battle choices and gold system

--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,9 @@
                         <span id="resource-container" class="px-3 py-1 bg-blue-900/50 rounded-full text-sm flex items-center">
                             <i id="resource-icon" class="fas fa-bolt text-purple-400 mr-1"></i> <span id="player-resource-text">0/0</span>
                         </span>
+                        <span id="gold-display" class="px-3 py-1 bg-yellow-900/50 rounded-full text-sm flex items-center">
+                            <i class="fas fa-coins text-yellow-400 mr-1"></i> <span id="gold-text">0</span> Or
+                        </span>
                     </div>
                 </div>
                 
