Ajout talents combos et bonus spé

--- a/Index.html
+++ b/Index.html
@@ -178,9 +178,12 @@
     <div id="talent-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden">
         <div class="bg-gray-800 p-6 rounded-xl space-y-4">
             <h2 class="text-lg font-bold mb-2">Choisissez un talent</h2>
-            <div class="grid grid-cols-2 gap-2">
+            <div class="grid grid-cols-3 gap-2">
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="chooseTalent('force')">Force accrue</button>
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="chooseTalent('protection')">Protection renforcée</button>
+                <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="chooseTalent('comboCrit')">Folie du combat</button>
+                <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="chooseTalent('comboHeal')">Second souffle</button>
+                <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="chooseTalent('comboMana')">Canalisation rapide</button>
             </div>
         </div>
     </div>
