Ajout du système de craft

--- a/Index.html
+++ b/Index.html
@@ -189,6 +189,15 @@
         </div>
     </div>
 
+    <div id="craft-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden">
+        <div class="bg-gray-800 p-6 rounded-xl space-y-4">
+            <h2 class="text-lg font-bold mb-2">Atelier</h2>
+            <div id="craft-message" class="text-blue-200 text-sm"></div>
+            <div id="craft-buttons" class="grid grid-cols-2 gap-2 mb-2"></div>
+            <button class="px-3 py-2 bg-gray-700 rounded hover:bg-gray-800 w-full" onclick="closeCraft()">Retour</button>
+        </div>
+    </div>
+
     <div id="shop-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden">
         <div class="bg-gray-800 p-6 rounded-xl space-y-4">
             <h2 class="text-lg font-bold mb-2">Magasin</h2>
