Refactor ability system and resources

--- a/Index.html
+++ b/Index.html
@@ -60,8 +60,8 @@
                     <button onclick="playerAttack()" class="action-btn bg-gradient-to-r from-red-500 to-pink-600 hover:from-red-600 hover:to-pink-700" aria-label="Attaquer">
                         <i class="fas fa-bolt mr-2" aria-hidden="true"></i> Attaquer
                     </button>
-                    <button onclick="playerHeal()" class="action-btn bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700" aria-label="Protection">
-                        <i class="fas fa-shield-alt mr-2" aria-hidden="true"></i> Protection
+                    <button onclick="playerAbility()" class="action-btn bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700" aria-label="Capacité">
+                        <i class="fas fa-shield-alt mr-2" aria-hidden="true"></i> Capacité
                     </button>
                     <button onclick="playerDefend()" class="action-btn bg-gradient-to-r from-yellow-500 to-amber-600 hover:from-yellow-600 hover:to-amber-700" aria-label="Défense">
                         <i class="fas fa-shield-alt mr-2" aria-hidden="true"></i> Défense
