Ajout affichage stats complet et tests critique/esquive

--- a/Index.html
+++ b/Index.html
@@ -54,6 +54,8 @@
                 <div class="flex justify-around text-sm mb-4">
                     <span><i class="fas fa-sword text-red-300 mr-1"></i><span id="player-attack-text">0</span></span>
                     <span><i class="fas fa-shield-alt text-blue-300 mr-1"></i><span id="player-defense-text">0</span></span>
+                    <span><i class="fas fa-crosshairs text-purple-300 mr-1"></i><span id="player-crit-text">0%</span></span>
+                    <span><i class="fas fa-person-running text-green-300 mr-1"></i><span id="player-dodge-text">0%</span></span>
                 </div>
                 
                 <div class="grid grid-cols-2 gap-3">
