Ajout système d'équipement et craft

--- a/Index.html
+++ b/Index.html
@@ -142,6 +142,7 @@
         <!-- Inventory -->
         <div class="frosted-glass rounded-xl p-6 shadow-lg border border-blue-900/50 mt-6">
             <h2 class="text-2xl font-bold text-blue-300 mb-4">Inventaire</h2>
+            <div id="equipment-display" class="grid grid-cols-2 sm:grid-cols-4 gap-4 mb-4"></div>
             <div id="inventory-items" class="grid grid-cols-2 sm:grid-cols-4 gap-4"></div>
         </div>
     </div>
