--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,10 @@
             <p class="text-xl text-blue-200">Un voyage à travers les ombres</p>
         </header>
 
+        <div id="location-container" class="frosted-glass rounded-xl mb-6 overflow-hidden">
+            <img id="location-image" class="location-img" src="" alt="Lieu actuel">
+        </div>
+
         <!-- Game Area -->
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
             <!-- Player Section -->
@@ -108,9 +112,7 @@
                 
                 <div class="relative h-64 mb-4 flex items-center justify-center">
                     <div id="enemy-character">
-                        <div class="w-32 h-32 rounded-full bg-gradient-to-br from-gray-700 to-gray-900 shadow-lg shadow-red-500/20 flex items-center justify-center">
-                            <i class="fas fa-paw text-5xl text-red-400"></i>
-                        </div>
+                        <img id="enemy-image" class="enemy-img" src="" alt="Ennemi">
                     </div>
                     <div class="absolute bottom-0 left-0 right-0 bg-gray-800/50 rounded-full h-2">
                         <div id="enemy-health" class="health-bar bg-gradient-to-r from-red-500 to-pink-600 h-full rounded-full" style="width: 80%"></div>
