Ajout systeme de dialogues et quetes

--- a/Index.html
+++ b/Index.html
@@ -194,6 +194,13 @@
         </div>
     </div>
 
+    <div id="dialogue-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden">
+        <div class="bg-gray-800 p-6 rounded-xl space-y-4">
+            <p id="dialogue-text" class="mb-4"></p>
+            <div id="dialogue-buttons" class="grid grid-cols-1 gap-2"></div>
+        </div>
+    </div>
+
     <div id="craft-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden">
         <div class="bg-gray-800 p-6 rounded-xl space-y-4">
             <h2 class="text-lg font-bold mb-2">Atelier</h2>
