Ajout d'un encart Quêtes et mise à jour automatique

--- a/Index.html
+++ b/Index.html
@@ -148,7 +148,7 @@
             <div id="inventory-items" class="grid grid-cols-2 sm:grid-cols-4 gap-4"></div>
         </div>
 
-        <!-- Quêtes -->
+        <!-- Encart pour afficher les quêtes en cours et terminées -->
         <div class="frosted-glass rounded-xl p-6 shadow-lg border border-blue-900/50 mt-6">
             <h2 class="text-2xl font-bold text-blue-300 mb-4">Quêtes</h2>
             <div id="quest-log" class="grid grid-cols-1 sm:grid-cols-2 gap-4">
