--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,14 @@
 <body class="bg-custom text-white min-h-screen flex flex-col items-center justify-center p-4 font-sans">
     <div class="max-w-4xl w-full">
         <!-- Header -->
-        <header class="text-center mb-8">
+        <header class="text-center mb-4">
             <h1 class="text-5xl font-bold mb-2 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-blue-500">LUMINA</h1>
             <p class="text-xl text-blue-200">Un voyage à travers les ombres</p>
         </header>
+        <div class="flex justify-end space-x-4 mb-4 text-sm">
+            <label><input type="checkbox" id="music-toggle" checked class="mr-1">Musique</label>
+            <label><input type="checkbox" id="sfx-toggle" checked class="mr-1">Bruitages</label>
+        </div>
 
         <div id="location-container" class="frosted-glass rounded-xl mb-6 overflow-hidden">
             <img id="location-image" class="location-img" src="" alt="Lieu actuel">
@@ -211,7 +215,8 @@
 
     <div id="scenario-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center hidden">
         <div class="bg-gray-800 p-6 rounded-xl space-y-4">
-            <p id="scenario-text" class="mb-4"></p>
+            <p id="scenario-text" class="mb-2"></p>
+            <p id="road-bonus-display" class="text-sm text-blue-200"></p>
             <div id="scenario-buttons" class="grid grid-cols-2 gap-2"></div>
         </div>
     </div>
