Ajout affichage lieu et amélioration du mage

--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,7 @@
 
         <div id="location-container" class="frosted-glass rounded-xl mb-6 overflow-hidden">
             <img id="location-image" class="location-img" src="" alt="Lieu actuel">
+            <div id="location-name" class="p-2 text-lg font-bold text-center"></div>
         </div>
 
         <!-- Game Area -->
