Ajout d'une intro avec bouton Jouer

--- a/Index.html
+++ b/Index.html
@@ -177,6 +177,13 @@
     </div>
 
     <!-- Modales de choix -->
+    <div id="intro-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center">
+        <div class="bg-gray-800 p-6 rounded-xl space-y-4 text-center">
+            <h2 class="text-lg font-bold mb-2">Bienvenue dans LUMINA</h2>
+            <p class="max-w-xs">Une brume mystérieuse envahit les terres. Seuls les aventuriers audacieux pourront percer ses secrets.</p>
+            <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="startGame()">Jouer</button>
+        </div>
+    </div>
     <div id="class-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center">
         <div class="bg-gray-800 p-6 rounded-xl space-y-4">
             <h2 class="text-lg font-bold">Choisissez votre classe</h2>
