--- a/Index.html
+++ b/Index.html
@@ -68,7 +68,7 @@
                     <span><i class="fas fa-person-running text-green-300 mr-1"></i><span id="player-dodge-text">0%</span></span>
                 </div>
                 
-                <div class="grid grid-cols-2 gap-3">
+                <div class="grid grid-cols-3 gap-3">
                     <button onclick="playerAttack()" class="action-btn bg-gradient-to-r from-red-500 to-pink-600 hover:from-red-600 hover:to-pink-700" aria-label="Attaquer">
                         <i class="fas fa-bolt mr-2" aria-hidden="true"></i> Attaquer
                     </button>
@@ -80,6 +80,9 @@
                     </button>
                     <button onclick="playerSpecial()" class="action-btn bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700" aria-label="Spécial">
                         <i class="fas fa-star mr-2" aria-hidden="true"></i> Spécial
+                    </button>
+                    <button onclick="playerFlee()" class="action-btn bg-gradient-to-r from-gray-500 to-gray-700 hover:from-gray-600 hover:to-gray-800" aria-label="Fuir">
+                        <i class="fas fa-running mr-2" aria-hidden="true"></i> Fuir
                     </button>
                 </div>
             </div>
