--- a/Index.html
+++ b/Index.html
@@ -54,15 +54,15 @@
                     </div>
                     <div class="absolute bottom-0 left-0 right-0 space-y-1">
                         <div class="bg-gray-800/50 rounded-full h-2">
-                            <div id="player-health" class="health-bar bg-gradient-to-r from-green-400 to-blue-500 h-full rounded-full" style="width: 84%"></div>
+                            <div id="player-health" title="" class="health-bar bg-gradient-to-r from-green-400 to-blue-500 h-full rounded-full" style="width: 84%"></div>
                         </div>
                         <div class="bg-gray-800/50 rounded-full h-2">
-                            <div id="player-resource-bar" class="health-bar bg-gradient-to-r from-purple-400 to-indigo-600 h-full rounded-full" style="width: 100%"></div>
+                            <div id="player-resource-bar" title="" class="health-bar bg-gradient-to-r from-purple-400 to-indigo-600 h-full rounded-full" style="width: 100%"></div>
                         </div>
                     </div>
                 </div>
                 <div class="flex justify-around text-sm mb-4">
-                    <span><i class="fas fa-sword text-red-300 mr-1"></i><span id="player-attack-text">0</span></span>
+                    <span><span class="mr-1 text-red-300">⚔️</span><span id="player-attack-text">0</span></span>
                     <span><i class="fas fa-shield-alt text-blue-300 mr-1"></i><span id="player-defense-text">0</span></span>
                     <span><i class="fas fa-crosshairs text-purple-300 mr-1"></i><span id="player-crit-text">0%</span></span>
                     <span><i class="fas fa-person-running text-green-300 mr-1"></i><span id="player-dodge-text">0%</span></span>
