Améliorations diverses du gameplay

--- a/Index.html
+++ b/Index.html
@@ -43,6 +43,7 @@
                             <i class="fas fa-coins text-yellow-400 mr-1"></i> <span id="gold-text">0</span> Or
                         </span>
                         <span id="time-display" class="px-3 py-1 bg-blue-900/50 rounded-full text-sm">Jour</span>
+                        <span id="road-bonus-main" class="px-3 py-1 bg-blue-900/50 rounded-full text-sm"></span>
                     </div>
                 </div>
                 
@@ -270,6 +271,8 @@
             <div class="grid grid-cols-2 gap-2 mb-2">
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="buyForge('weapon')">Arme (+3 ATK, 50 or)</button>
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="buyForge('armor')">Armure (+3 DEF, 50 or)</button>
+                <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="buyForge('crit')">Runes (+5% Crit, 50 or)</button>
+                <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="buyForge('dodge')">Équilibre (+5% Esquive, 50 or)</button>
             </div>
             <button class="px-3 py-2 bg-gray-700 rounded hover:bg-gray-800 w-full" onclick="closeForge()">Retour</button>
         </div>
