--- a/Index.html
+++ b/Index.html
@@ -82,6 +82,9 @@
                     <button onclick="playerSpecial()" class="action-btn bg-gradient-to-r from-purple-500 to-indigo-600 hover:from-purple-600 hover:to-indigo-700" aria-label="Spécial">
                         <i class="fas fa-star mr-2" aria-hidden="true"></i> Spécial
                     </button>
+                    <button onclick="playerFinisher()" class="action-btn bg-gradient-to-r from-orange-500 to-red-600 hover:from-orange-600 hover:to-red-700" aria-label="Finisher">
+                        <i class="fas fa-skull-crossbones mr-2" aria-hidden="true"></i> Finisher
+                    </button>
                     <button onclick="playerFlee()" class="action-btn bg-gradient-to-r from-gray-500 to-gray-700 hover:from-gray-600 hover:to-gray-800" aria-label="Fuir">
                         <i class="fas fa-running mr-2" aria-hidden="true"></i> Fuir
                     </button>
