Ajout d'un mini-jeu de forge

--- a/Index.html
+++ b/Index.html
@@ -271,6 +271,7 @@
             <h2 class="text-lg font-bold mb-2">Forge</h2>
             <div class="text-yellow-300 text-sm">Or: <span id="forge-gold-text">0</span></div>
             <div id="forge-message" class="text-blue-200 text-sm"></div>
+            <canvas id="forge-canvas" width="200" height="40" class="mx-auto hidden bg-gray-700 rounded"></canvas>
             <div class="grid grid-cols-2 gap-2 mb-2">
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="buyForge('weapon')">Arme (+3 ATK, 50 or)</button>
                 <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="buyForge('armor')">Armure (+3 DEF, 50 or)</button>
