--- a/Index.html
+++ b/Index.html
@@ -181,6 +181,20 @@
             <h2 class="text-2xl font-bold text-blue-300 mb-4">Bestiaire</h2>
             <ul id="bestiary-list" class="space-y-1 text-sm"></ul>
         </div>
+
+        <!-- Album de cartes -->
+        <div class="frosted-glass rounded-xl p-6 shadow-lg border border-blue-900/50 mt-6">
+            <h2 class="text-2xl font-bold text-blue-300 mb-4">Album de cartes</h2>
+            <div class="mb-2 text-sm">Complétion : <span id="card-gauge">0%</span></div>
+            <div id="card-collection" class="grid grid-cols-3 gap-2 text-sm"></div>
+        </div>
+
+        <!-- Prestige -->
+        <div class="frosted-glass rounded-xl p-6 shadow-lg border border-blue-900/50 mt-6">
+            <h2 class="text-2xl font-bold text-blue-300 mb-4">Prestige</h2>
+            <div class="mb-2 text-sm">Astres : <span id="astres-count">0</span></div>
+            <button class="px-3 py-2 bg-blue-700 rounded hover:bg-blue-800" onclick="prestigeReset()">Réinitialiser</button>
+        </div>
     </div>
 
     <!-- Modales de choix -->
